[package]
name = "railwind"
version = "0.0.3"
authors = ["pintariching"]
license = "MIT"
description = "Tailwind compiler for utility classes written in Rust"
readme = "../README.md"
homepage = "https://github.com/pintariching/railwind"
repository = "https://github.com/pintariching/railwind"
keywords = ["tailwind", "css", "compiler"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.6.0"
ron = "0.8.0"
serde = { version = "1.0.145", features = ["derive"] }
hex = "0.4.3"