[package]
name = "railwind"
version = "0.0.12"
authors = ["pintariching"]
license = "MIT"
description = "Tailwind compiler for utility classes written in Rust"
readme = "../README.md"
homepage = "https://github.com/pintariching/railwind"
repository = "https://github.com/pintariching/railwind"
keywords = ["tailwind", "css", "compiler"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.7.0"
ron = { version = "0.8.0", features = ["indexmap"] }
hex = "0.4.3"
line-col = "0.2.1"
indexmap = "1.9.2"

[dev-dependencies]
walkdir = "2.3.2"