[package]
name = "railwind_cli"
version = "0.0.10"
authors = ["pintariching"]
license = "MIT"
description = "CLI tool for the Railwind compiler"
readme = "../README.md"
homepage = "https://github.com/pintariching/railwind"
repository = "https://github.com/pintariching/railwind"
keywords = ["tailwind", "css", "compiler", "cli"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
railwind = "0.0.12" 