[package]
name = "railwind_cli"
version = "0.1.1"
authors = ["pintariching"]
license = "MIT"
description = "CLI tool for the Railwind compiler"
readme = "../README.md"
homepage = "https://github.com/pintariching/railwind"
repository = "https://github.com/pintariching/railwind"
keywords = ["tailwind", "css", "compiler", "cli"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = { version = "0.8.0" }
serde = { version = "1.0.152", features = ["derive"] }
clap = { version = "4.1.4", features = ["derive"] }
globwalk = "0.8.1"
railwind = { path = "../railwind" } #"0.1.1"
notify = "5.1.0"